[metadata]
name = cli_nested_json
version = 2024.03.07
description = CLI Nested JSON Parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/cli_nested_json
author = isidentical
author_email = isidentical@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/isidentical/cli_nested_json
    Tracker = https://github.com/isidentical/cli_nested_json/issues

[options]
py_modules = cli_nested_json
python_requires = >=3.9
